# orbital-junkyard

./: .env.example  .gitignore  PROJECT_SUMMARY.md  README.md  orbital-junkyard-project.md  pyproject.toml
.github/workflows/: collect_and_upload.yml
databricks/collection/: collect_celestrak.py  collect_noaa.py  collect_spacetrack.py
databricks/export/: export_gold_to_json.py
databricks/pipelines/: 01_bronze_ingestion.py  02_silver_transforms.py  03_gold_aggregations.py
docs/: todo.md
frontend/: .gitignore  next.config.ts  package-lock.json  package.json
frontend/scripts/: copy-cesium.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/data/[table]/: route.ts
frontend/src/app/constellations/: page.tsx
frontend/src/app/countries/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/: Globe3D.tsx  Navbar.tsx  StatsOverlay.tsx
frontend/src/components/charts/: ConstellationChart.tsx  CountryChart.tsx  DashboardCharts.tsx
frontend/src/lib/: data.ts  i18n.tsx  types.ts
scripts/: run_pipeline.bat  run_pipeline.py  test_apis.py  upload_to_s3.py
